--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     caddy:
-        image: ghcr.io/caddybuilds/caddy-cloudflare:2.10
+        image: ghcr.io/caddybuilds/caddy-cloudflare:2.9.1
         container_name: caddy
         hostname: caddy
         restart: always
@@ -10,6 +10,7 @@ services:
             - CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
         volumes:
             - $PWD/Caddyfile:/etc/caddy/Caddyfile
+            - $PWD/access.log:/var/log/caddy/access.log
             - $PWD/index.html:/srv/index.html
             - caddy-data:/data
 
