--- a/caddy/.env.example
+++ b/caddy/.env.example
@@ -1,5 +1,5 @@
 # consistent with Xray config
-SELFSTEAL_DOMAIN=your.domain.com
+STEAL_DOMAIN=your.domain.com
 
 # openssl rand -hex 8
 SUB_PATH=your_sub_path
