--- a/xray/docker-compose.yml
+++ b/xray/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   xray:
-    image: ghcr.io/xtls/xray-core:latest
+    image: ghcr.io/xtls/xray-core:25.9.11
     container_name: xray
     restart: always
     network_mode: host
