--- a/caddy/docker-compose.yml
+++ b/caddy/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - ./index.html:/srv/index.html
-      - ./sub:/srv/sub
+      - ./sub:/srv/${SUB_PATH}
       - ssl-data:/data
 
 volumes:
