add geosite:private to block

--- a/xray/config.jsonc
+++ b/xray/config.jsonc
@@ -91,6 +91,7 @@
       },
       {
         "domain": [
+          "geosite:private",
           "geosite:category-ru"
         ],
         "outboundTag": "block"
