--- a/caddy/.env.example
+++ b/caddy/.env.example
@@ -1,5 +1,9 @@
+# https://github.com/CaddyBuilds/caddy-cloudflare?tab=readme-ov-file#configuration
+CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
+
 # Consistent with Xray config
-REALITY_DOMAIN=your.domain.com
+BASE_DOMAIN=domain.tld
+REALITY_DOMAIN=reality.domain.tld
 
 # openssl rand -hex 8
 SUB_PATH=your_sub_path
